tests/paczka1/small_fuzzy/10530769.err
Error in line 6: Wym A507 97,2
Error in line 8: iDiAY15tTy A908 5,6
Error in line 4: 40xsSRoD A507 100,0
Error in line 7: hl0Q2Elf60 S692 4,6
Error in line 12: 40xsSRoD S692 17,8
